oxiplate-derive/tests/broken/strings/string-continuation-span.stderr
error: End of file encountered while parsing a writ. Expected `}}`, `-}}`, or `_}}`
 --> tests/broken/strings/string-continuation-span.rs:6:6
  |
6 |     {{")]
  |      ^
